Fix horizontal scrollbar height
Without a height defined, the scrollbar would be about 16px tall. This makes it look odd. Therefore set a height of 8px.

--- a/sass/partials/_webkit-scrollbar.scss
+++ b/sass/partials/_webkit-scrollbar.scss
@@ -5,6 +5,7 @@
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
